--- a/app/globals.css
+++ b/app/globals.css
@@ -16,14 +16,12 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+html,body {
+ padding: 20px;
+}
+
+button{
+  padding: 10px 20px;
 }
 
 @layer utilities {
